fix inconsistent spacings

--- a/pages/blocks/page-feed/page-feed.css
+++ b/pages/blocks/page-feed/page-feed.css
@@ -23,6 +23,10 @@ main .page-feed:last-child {
   margin-bottom: var(--block-spacing-m);
 }
 
+main > .section.has-background > .page-feed:last-child {
+  margin-bottom: 0;
+}
+
 main .page-feed.col-2-pf-cards,
 main .page-feed.col-3-pf-cards,
 main .page-feed.col-4-pf-cards,
